Changes in version 1.0.4.9990
  
  New features
    -added snpChip argument to pullIbdHaplo for backwards compatibility
    -exposed internal mixed model solvers
    
  Bug fixes
    -fixed error in pullIbdHaplo when chr isn't NULL
    -fixed an error with assigning 1 QTL and/or SNP

Changes in version 1.0.4

  Bug fixes
    -fixed errors in implementation of Gamma Sprinkling model

Changes in version 1.0.3

  Bug fixes
    -fixed formatting error in genetic maps created by runMacs that broke genotype extraction functions

Changes in version 1.0.2

  New features
    -added h2 and H2 to setPhenoGCA
    -pullGeno and pullHaplo functions now report marker names from the genetic map

Changes in version 1.0.1

  Bug fixes
    -removed lazyData field in DESCRIPTION

Changes in version 1.0.0
  
  AlphaSimR manuscript has been published in G3 (citation added)
  
  New features
    -changed to a Gamma Sprinkling model for crossovers, default is still a Gamma model
    -change default interfernce parameter (v) to 2.6 to be consistent with the Kosambi mapping function (was 1, consistent with the Haldane mapping function)
    -new internal id (iid) that allows user to freely change id slot in populations
    -runMacs2 now adjusts Ne for autopolyploids
    -parent populations are now passed to finalizePop
    -check added that throws an error when use of discontinued "gender" argument is detected
    -added experimental MegaPop-class

Changes in version 0.13.0

  New features
    -references to gender have been changed to the more appropriate terms sex or sexes
    -added misc slot to populations
    -added finalizePop to SimParam
    -added physical positions to getSnpMap and getQtlMap
    -you can now use h2 and H2 to specify error variance in setPheno
    -simParam$setVarE now accepts a matrix for varE
    
    Bug fixes
    -fixed a bug in editGenome when making multiple edits
    -adding merging of centromere vector in cChr

Changes in version 0.12.2
  
  New features