@@ -3,6 +3,7 @@ Changes in version 1.0.4.9990
   New features
     -added snpChip argument to pullIbdHaplo for backwards compatibility
     -exposed internal mixed model solvers
+    -all selection functions now return a warning when there are not enough individuals
     
   Bug fixes
     -fixed error in pullIbdHaplo when chr isn't NULL
